--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,34 +4,34 @@
 			{% if page.path == "home.html" %}
 			<span class="title">
 				<li>
-					<a href="/home.html">home</a>
+					<a href="/home.html">首页</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/index.html">home</a>
+					<a href="/index.html">首页</a>
 				</li>			
 			{% endif %}
 			{% if page.path == "category.html" %}
 			<span class="title">
 				<li>
-					<a href="/category.html">category</a>
+					<a href="/category.html">分类</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/category.html">category</a>
+					<a href="/category.html">分类</a>
 				</li>			
 			{% endif %}
 			{% if page.path == "about.html" %}
 			<span class="title">
 				<li>
-					<a href="/about.html">about</a>
+					<a href="/about.html">关于</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/about.html">about</a>
+					<a href="/about.html">关于</a>
 				</li>			
 			{% endif %}
 		</div>
